# planter

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  detailed_summary.tsv  docker-compose.yml  patch_and_run.sh  pyproject.toml  requirements.txt  samples.txt  setup.py
.github/workflows/: ci.yml  release.yml
.snakemake/metadata/: U1JSMjEwMzg0OF9maXJzdDVrX3RyaW5pdHk=  U1JSMjEwMzg0OF9zZWNvbmQ1a190cmluaXR5  (+43 more)
app/: config.py  main.py
docs/: README.md  ci_cd.md  database_update_process.md  schema_versioning.md  testing.md  troubleshooting.md
images/: dag.dot
notebooks/: add-expression-debugging.ipynb  create-duckdb-debugging.ipynb  database-deepseek.ipynb  database-deepseek2.ipynb  database-expression.ipynb  database-queries.ipynb  database.ipynb  lichen_partners.ipynb  master-database.ipynb  repseq_stats.ipynb
patches/: monkey_patch.py  run_snakemake.py  snakemake_logger_patch.py
results/: execution_report.html  execution_timeline.html  execution_trace.txt
scripts/: get_qc_stats.py  get_srr_metadata.py  iterative_cluster.sh  mmseqs_cluster_update.py  parse_eggnog.py  parse_gff.py  seqhash_rename.py
tests/: SRR2103848_eggnog.emapper.seed_orthologs  __init__.py  sample_trinity.Trinity.fasta  sample_trinity.Trinity.fasta.gene_trans_map  sample_trinity.Trinity.fasta.transdecoder.bed  sample_trinity.Trinity.fasta.transdecoder.cds  sample_trinity.Trinity.fasta.transdecoder.pep  test_enzymes.faa  trinity_out_dir.Trinity.fasta  trinity_out_dir.Trinity.fasta.gene_trans_map
workflow/: Snakefile  config.yaml
(+974 files in other folders)
